--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -430,7 +430,7 @@
         color: #EE7754;
         @include screen('lg', 'min') {
           .catalog-el-img {
-            opacity: 0;
+            // opacity: 0;
             z-index: 1;
           }
         }
