--- a/app/templates/pages/product.pug
+++ b/app/templates/pages/product.pug
@@ -28,8 +28,8 @@ block content
         .content-section.visual-animation-base-block
           .pagination
             a.pagination-back Продукция
-          .product-title
-            .visual-animation-base Сыр Косичка «Гиагинский» копченый
+          .product-title.visual-animation-base-block
+            span Сыр Косичка «Гиагинский» копченый
             +icon('cloud-2', 'svg')
           .product-composition.left-product-mg.visual-animation-base-block
             .product-composition-title Состав:
