--- a/app/templates/pages/404.pug
+++ b/app/templates/pages/404.pug
@@ -23,7 +23,7 @@ block content
         .page404-circle
         .page404-4.left
         .page404-4.right
-      .page404-box.visual-animation-base-block
+      .page404-box
         .page404-title увы, этой страницы больше нет
         +link('Главная страница','./index.html','true')
         +link('Продукция','./catalog-products.html','true')
