--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -15,6 +15,9 @@
 
 .visual-animation-word, .visual-animation-word-s, .visual-animation-word-m {
   white-space: nowrap;
+  &-element{
+    word-wrap: inherit;
+  }
 }
 
 .visual-animation-showing, .visual-animation-showing-s, .visual-animation-showing-m {
