--- a/app/scss/components/modal/main.scss
+++ b/app/scss/components/modal/main.scss
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100vh;
     z-index: 99999;
-    top: 0;
+    top: 0 !important;
     left: 0;
     transition: background .3s ease;
     margin-left: 0px;
