--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -16,7 +16,7 @@
 .visual-animation-word, .visual-animation-word-s, .visual-animation-word-m {
   white-space: nowrap;
   &-element{
-    word-wrap: nowrap;
+    white-space: nowrap;
   }
 }
 
