--- a/app/scss/base/default.scss
+++ b/app/scss/base/default.scss
@@ -180,11 +180,11 @@ button {
       float: right;
       margin-right: -2px;
       margin-top: 60px;
+      position: relative;
       [class*="-searchbox"] {
         display: none !important;
       }
     }
-  
     //change css controls
     [class*="-controls-pane"] {
       top: 50% !important;
@@ -199,6 +199,7 @@ button {
       left: auto !important;
       right: 8px !important;
       top: 0 !important;
+      position: absolute !important;
       transform: translateY(-50%);
     }
   }
