--- a/app/templates/pages/product.pug
+++ b/app/templates/pages/product.pug
@@ -37,19 +37,19 @@ block content
           .product-desc.left-product-mg Это настоящая находка для больших поклонников сыра, которая порадует и оригинальным вкусом, и необычным оформлением. Легкий аромат копчения, приятная слоистая текстура, умеренно упругая корочка соблазнительного золотисто-коричневого цвета и мягкие волокна с нежным сливочным вкусом — копченый сыр «Косичка» сочетает в себе, казалось бы, совершенно несовместимые гастрономические качества.
           .product-row.visual-animation-base-block
             .product-row-el
-              +icon('beer', 'svg').icon
+              img(src='./images/prod_detail/type-1.png')
               .title Идеален как закуска к пиву
             .product-row-el
-              +icon('salad', 'svg').icon
+              img(src='./images/prod_detail/type-2.png')
               .title Отличная добавка к салатам
             .product-row-el
-              +icon('pan', 'svg').icon
+              img(src='./images/prod_detail/type-3.png')
               .title Ингредиент сложных соусов для спагетти
             .product-row-el
-              +icon('shawarma', 'svg').icon
+              img(src='./images/prod_detail/type-4.png')
               .title Для приготовления блюд национальной кухни
             .product-row-el
-              +icon('paste', 'svg').icon
+              img(src='./images/prod_detail/type-5.png')
               .title Добавка к пасте
           .visual-animation-base-block
             .product-slider
