--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -342,6 +342,7 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
+            align-items: flex-start;
             margin-bottom: 70px;
             @include screen('sm', 'max') {
               flex-basis: 50%;
@@ -357,6 +358,11 @@
               line-height: 21px;
               margin-top: 38px;
               padding-right: 15px;
+            }
+            img{
+              width: auto;
+              height: auto;
+              max-width: 100%;
             }
           }
         }
