--- a/app/templates/modules/forms.pug
+++ b/app/templates/modules/forms.pug
@@ -91,7 +91,7 @@ mixin askQuestionFormModal
         +inputField('text', 'email', 'Ваша почта для ответа', false)
         +textarea('question', '29', '3', 'Ваш вопрос', 'необязательно')
         .main-checkbox
-          input(type="checkbox" id='agree' name='agree')
+          input(type="checkbox" id='agreemodal' name='agree')
           label(for='agree' class="main-checkbox-name")
             +icon('checkbox', 'svg').state-default
             +icon('checkbox-hover', 'svg').state-hover
