--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -67,14 +67,22 @@ block content
               +btn-slider('right').bg-additional#slider-about-right
             .dates.swiper-container
               .swiper-wrapper
-                button.date-btn.swiper-slide 1949
-                button.date-btn.swiper-slide 1968
-                button.date-btn.swiper-slide 1979
-                button.date-btn.swiper-slide 1988
-                button.date-btn.swiper-slide 1999
-                button.date-btn.swiper-slide 2006
-                button.date-btn.swiper-slide 2010
-                button.date-btn.swiper-slide 2020
+                button.date-btn.swiper-slide 
+                  span 1949
+                button.date-btn.swiper-slide 
+                  span 1968
+                button.date-btn.swiper-slide 
+                  span 1979
+                button.date-btn.swiper-slide 
+                  span 1988
+                button.date-btn.swiper-slide 
+                  span 1999
+                button.date-btn.swiper-slide 
+                  span 2006
+                button.date-btn.swiper-slide 
+                  span 2010
+                button.date-btn.swiper-slide 
+                  span 2020
           .slider-about-container.swiper-wrapper
             +slider-about-container-el(getData('sliders/about'))
   section.main-about-awards
