--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -5,7 +5,7 @@
 .left-product-mg {
   margin-left: 100px;
 
-  @include screen('md', 'max') {
+  @include screen("md", "max") {
     margin-left: 0px;
   }
 }
@@ -16,7 +16,7 @@
   margin-right: -20px;
   margin-left: 80px;
 
-  @include screen('md', 'max') {
+  @include screen("md", "max") {
     margin-left: -20px;
   }
 
@@ -39,39 +39,40 @@
     display: flex;
     justify-content: space-between;
 
-    @include screen('custom-860', 'max') {
+    @include screen("custom-860", "max") {
       flex-direction: column;
     }
 
-    .product-item, .content-section {
+    .product-item,
+    .content-section {
       flex-basis: 50%;
       padding: 20px;
       padding-top: 170px;
-      
-      @include screen('custom-860', 'max') {
+
+      @include screen("custom-860", "max") {
         flex-basis: 100%;
         padding: 0px;
       }
     }
 
     .product-item {
-      background-image: url('../images/bg-product.svg');
+      background-image: url("../images/bg-product.svg");
       background-size: cover;
       background-repeat: no-repeat;
       width: 100%;
       z-index: 1;
 
-      @include screen('custom-860', 'max') {
+      @include screen("custom-860", "max") {
         padding-top: 20%;
       }
 
-      @include screen('custom-860', 'max') {
+      @include screen("custom-860", "max") {
         &::after {
           display: block;
           left: 0;
           bottom: 0;
-          content: '';
-          background: url('../images/catalog-bottom.png') no-repeat;
+          content: "";
+          background: url("../images/catalog-bottom.png") no-repeat;
           background-position: bottom;
           background-size: contain;
           z-index: 2;
@@ -81,14 +82,14 @@
         }
       }
 
-      @include screen('custom-860', 'max') {
+      @include screen("custom-860", "max") {
         position: relative;
         width: 100vw;
         right: 20px;
         top: -20px;
       }
 
-      @include screen('xs', 'max') {
+      @include screen("xs", "max") {
         position: relative;
         width: 100%;
         right: 0;
@@ -101,18 +102,18 @@
         position: relative;
         transition: height 0.3s ease;
         display: flex;
-        @include screen('custom-860', 'max') {
+        @include screen("custom-860", "max") {
           height: auto;
           padding-top: 50px;
           padding-bottom: 80px;
         }
-    
+
         .image {
           transform: translateX(0%);
           width: 75%;
           margin: auto;
 
-          @include screen('custom-860', 'max') {
+          @include screen("custom-860", "max") {
             width: 65%;
           }
         }
@@ -122,13 +123,17 @@
           position: relative;
         }
 
-        &.pageLoaded{
-          .addons{
-            .cloud-1, .cloud-2, .cloud-3, .rhombus-1, .rhombus-2, .print{
+        &.pageLoaded {
+          .addons {
+            .cloud-1,
+            .cloud-2,
+            .cloud-3,
+            .rhombus-1,
+            .rhombus-2,
+            .print {
               transform: translateX(0);
             }
           }
-          
         }
         .addons {
           height: 100%;
@@ -136,7 +141,12 @@
           position: absolute;
           top: 0;
 
-          .cloud-1, .cloud-2, .cloud-3, .rhombus-1, .rhombus-2, .print{
+          .cloud-1,
+          .cloud-2,
+          .cloud-3,
+          .rhombus-1,
+          .rhombus-2,
+          .print {
             position: absolute;
           }
 
@@ -146,7 +156,7 @@
             transform: translateX(-200px);
             transition: 0.8s ease-out;
 
-            @include screen('950', 'max') {
+            @include screen("950", "max") {
               font-size: 8px;
             }
           }
@@ -158,7 +168,7 @@
             transform: translateX(-550px);
             transition: 1.1s ease-out;
 
-            @include screen('950', 'max') {
+            @include screen("950", "max") {
               font-size: 5px;
             }
           }
@@ -170,7 +180,7 @@
             transition: 1s ease-out;
             z-index: -1;
 
-            @include screen('950', 'max') {
+            @include screen("950", "max") {
               font-size: 8px;
             }
           }
@@ -182,13 +192,13 @@
             transform: translateX(-150px);
             transition: 0.9s ease-out;
 
-            @include screen('lg', 'max') {
+            @include screen("lg", "max") {
               font-size: 6px;
               left: 3%;
               bottom: 52%;
             }
 
-            @include screen('950', 'max') {
+            @include screen("950", "max") {
               font-size: 5px;
             }
           }
@@ -200,7 +210,7 @@
             transform: translateX(-300px);
             transition: 0.8s ease-out;
 
-            @include screen('950', 'max') {
+            @include screen("950", "max") {
               font-size: 3px;
             }
           }
@@ -208,17 +218,17 @@
           .print {
             bottom: -4%;
             right: 8%;
-            @include screen('lg', 'max') {
+            @include screen("lg", "max") {
               font-size: 8px;
             }
 
-            @include screen('950', 'max') {
+            @include screen("950", "max") {
               font-size: 7px;
             }
-            @include screen('custom-860', 'max') {
+            @include screen("custom-860", "max") {
               bottom: 0px;
             }
-            @include screen('xs', 'max') {
+            @include screen("xs", "max") {
               bottom: 60px;
               right: -7%;
               font-size: 5px;
@@ -230,10 +240,12 @@
 
     .content-section {
       position: relative;
-      max-width: 554px;
+      max-width: 600px;
       margin: 0 auto;
-
-      @include screen('xs', 'max') {
+      @include screen("custom-860", "max") {
+        width: 100%;
+      }
+      @include screen("xs", "max") {
         padding-left: 20px;
         padding-right: 20px;
         max-width: 100%;
@@ -245,7 +257,7 @@
 
       .product {
         &-title {
-          font-family: 'Lineatura';
+          font-family: "Lineatura";
           font-style: normal;
           font-weight: normal;
           font-size: 70px;
@@ -260,18 +272,18 @@
             right: -10%;
             bottom: -30%;
 
-            @include screen('custom-860', 'max') {
+            @include screen("custom-860", "max") {
               display: none;
             }
           }
 
-          @include screen('custom-860', 'max') {
+          @include screen("custom-860", "max") {
             margin-bottom: 20px;
             font-size: 63px;
             line-height: 69px;
           }
 
-          @include screen('xs', 'max') {
+          @include screen("xs", "max") {
             margin-bottom: 15px;
             font-size: 30px;
             line-height: 36px;
@@ -281,11 +293,11 @@
         &-composition {
           margin-bottom: 125px;
 
-          @include screen('custom-860', 'max') {
+          @include screen("custom-860", "max") {
             margin-bottom: 60px;
           }
 
-          font-family: 'CeraPro';
+          font-family: "CeraPro";
           color: #312930;
 
           &-title {
@@ -305,13 +317,13 @@
         }
 
         &-desc {
-          font-family: 'CeraPro';
+          font-family: "CeraPro";
           font-size: 20px;
           line-height: 30px;
           position: relative;
           margin-bottom: 90px;
-          
-          @include screen('xs', 'max') {
+
+          @include screen("xs", "max") {
             font-size: 16px;
             line-height: 26px;
           }
@@ -322,12 +334,70 @@
             position: absolute;
             top: -10%;
             left: -15%;
-            background: #FFF3D6;
+            background: #fff3d6;
             width: 85%;
             height: auto;
             transform: skewX(-15deg);
             z-index: -1;
             padding-top: 34%;
+          }
+          &-table {
+            border: 0;
+            width: 100%;
+            margin-bottom: 100px;
+            @include screen("xs", "max") {
+              margin-bottom: 50px;
+            }
+            tr {
+              padding: 20px 0;
+              border-bottom: 1px solid #312930;
+              display: grid;
+              grid-template-columns: 2fr 3fr 3fr 2fr 2fr;
+              grid-column-gap: 10px;
+              grid-row-gap: 15px;
+              @media (max-width: 768px) {
+                grid-template-columns:repeat(auto-fit, minmax(120px, 1fr));
+              }
+            }
+            thead {
+              td {
+                font-style: normal;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 18px;
+                color: #312930;
+              }
+              @media (max-width: 768px) {
+                display: none;
+              }
+            }
+            tbody {
+              @media (max-width: 768px) {
+                tr:first-child {
+                  border-top: 1px solid #312930;
+                }
+              }
+              td {
+                font-family: PFRegalTextPro;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 16px;
+                line-height: 30px;
+                color: #312930;
+                @media (max-width: 768px) {
+                  &:before {
+                    content: attr(data-title);
+                    display: block;
+                    font-family: "CeraPro";
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 15px;
+                    color: #312930;
+                  }
+                }
+              }
+            }
           }
         }
 
@@ -335,7 +405,7 @@
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
-          font-family: 'CeraPro';
+          font-family: "CeraPro";
 
           &-el {
             flex-basis: calc(100% / 3);
@@ -344,7 +414,7 @@
             justify-content: flex-end;
             align-items: flex-start;
             margin-bottom: 70px;
-            @include screen('sm', 'max') {
+            @include screen("sm", "max") {
               flex-basis: 50%;
               margin-bottom: 40px;
             }
@@ -359,7 +429,7 @@
               margin-top: 38px;
               padding-right: 15px;
             }
-            img{
+            img {
               width: auto;
               height: auto;
               max-width: 100%;
@@ -383,9 +453,9 @@
             width: 100vw;
             height: 165px;
 
-            @include screen('sm', 'max') {
+            @include screen("sm", "max") {
               display: none;
-            }            
+            }
           }
 
           .slider-owerflow {
@@ -404,13 +474,13 @@
             padding: 20px;
             z-index: 10;
 
-            @include screen('sm', 'max') {
+            @include screen("sm", "max") {
               button {
                 transform: scale(0.8);
               }
-  
+
               button.left {
-                transform: scale(0.8) rotate(-180deg); 
+                transform: scale(0.8) rotate(-180deg);
               }
             }
           }
@@ -432,11 +502,11 @@
                 display: flex;
                 justify-content: center;
               }
-              
+
               &-thumb {
                 cursor: pointer;
-                width: 60px!important;
-                height: 60px!important;
+                width: 60px !important;
+                height: 60px !important;
                 border-radius: 50px;
                 border: 1px dashed #312930;
                 display: flex;
@@ -444,22 +514,22 @@
                 justify-content: center;
                 overflow: hidden;
                 position: relative;
-                
+
                 &::before {
                   position: absolute;
-                  box-shadow: inset 0px 0px 0px 6px rgba(255,255,255,1); //костыль ;)
+                  box-shadow: inset 0px 0px 0px 6px rgba(255, 255, 255, 1); //костыль ;)
                   width: 101%;
                   height: 101%;
                   z-index: 10;
                   top: 0px;
                   left: 0px;
                   display: block;
-                  content: '';
+                  content: "";
                   border-radius: 50px;
                 }
 
                 &.swiper-slide-thumb-active {
-                  border: 1px dashed #EE7754;
+                  border: 1px dashed #ee7754;
                 }
 
                 .thumb-wrapper {
@@ -488,7 +558,7 @@
             }
 
             .title {
-              font-family: 'CeraPro';
+              font-family: "CeraPro";
               font-style: normal;
               font-weight: normal;
               font-size: 11px;
@@ -500,7 +570,7 @@
             }
 
             .desc {
-              font-family: 'PFRegalTextPro';
+              font-family: "PFRegalTextPro";
               font-style: normal;
               font-weight: bold;
               font-size: 20px;
@@ -515,7 +585,7 @@
         margin-left: -30%;
         margin-bottom: 300px;
 
-        @include screen('custom-860', 'max') {
+        @include screen("custom-860", "max") {
           margin-bottom: 0px;
           padding-bottom: 300px;
           margin-left: 0%;
