--- a/app/scss/components/index/main.scss
+++ b/app/scss/components/index/main.scss
@@ -19,7 +19,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('../images/main-index.png');
+    background-image: url('../images/main-index.jpg');
     background-size: cover;
     z-index: -1;
   }
