--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -20,16 +20,21 @@
   }
 }
 
-.visual-animation-showing, .visual-animation-showing-s, .visual-animation-showing-m {
+.visual-animation-base.visual-animation-showing,
+.visual-animation-base-s.visual-animation-showing-s,
+.visual-animation-base-m.visual-animation-showing-m {
   -webkit-perspective: 400px;
+  -moz-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
   transform-style: flat;
 
   > * {
     -webkit-animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
+    -moz-animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     opacity: 1.0;
+    -moz-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
     display: inline-block;
   }
@@ -38,13 +43,16 @@
 @for $i from 1 through 15 {
   .visual-animation-showing-block > *:nth-child(#{$i}n) {
     animation-delay: #{$i * 30}ms;
+    -moz-animation-delay: #{$i * 30}ms;
   }
 
   .visual-animation-showing-block-s > *:nth-child(#{$i}n) {
+    -moz-animation-delay: #{$i * 250}ms;
     animation-delay: #{$i * 250}ms;
   }
 
   .visual-animation-showing-block-s > *:nth-child(#{$i}n) {
+    -moz-animation-delay: #{$i * 250}ms;
     animation-delay: #{$i * 250}ms;
   }
 }
@@ -56,9 +64,11 @@
   > * {
     transform-origin: bottom center 0px;
     -webkit-transform-origin: bottom center 0px;
-    opacity: 0.0 !important;
+    -moz-transform-origin: bottom center 0px;
+    opacity: 0.0;
     -webkit-transform: translate(0px, 100px);
     -ms-transform: translate(0px, 100px);
+    -moz-transform: translate(0px, 100px);
     transform: translate(0px, 100px);
 
     &.header-box {
@@ -70,36 +80,45 @@
     &.header-box-nav {
       -webkit-transform: translate(0px, -50%);
       -ms-transform: translate(0px, -50%);
+      -moz-transform: translate(0px, -50%);
       transform: translate(0px, -50%);
     }
   }
 }
 
-.visual-animation-showing-block, .visual-animation-showing-block-s, .visual-animation-showing-block-m {
+.visual-animation-base-block.visual-animation-showing-block,
+.visual-animation-base-block-s.visual-animation-showing-block-s,
+.visual-animation-base-block-m.visual-animation-showing-block-m {
   > * {
     opacity: 1.0;
     -webkit-animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
+    -moz-animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
 
     &.header-box {
       opacity: 1 !important;
       transform: none !important;
       -webkit-animation: none;
+      -moz-animation: none;
       animation: none;
     }
 
     &.header-box-nav {
       opacity: 1.0;
       -webkit-animation: notransformHeaderMenuNav 1100ms cubic-bezier(0, 0, 0, 1);
+      -moz-animation: notransformHeaderMenuNav 1100ms cubic-bezier(0, 0, 0, 1);
       animation: notransformHeaderMenuNav 1100ms cubic-bezier(0, 0, 0, 1);
       animation-fill-mode: forwards;
+      -moz-animation-fill-mode: forwards;
     }
   }
 }
 
 .visual-animation-base, .visual-animation-base-s, .visual-animation-base-m {
   -webkit-perspective: 400px;
+  -moz-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
   transform-style: flat;
@@ -114,9 +133,11 @@
     -webkit-transform-origin: bottom center 0px;*/
     transform-origin: bottom center 0px;
     -webkit-transform-origin: bottom center 0px;
-    opacity: 0.0 !important;
+    -moz-transform-origin: bottom center 0px;
+    opacity: 0.0;
     -webkit-transform: translate(0px, 100px);
     -ms-transform: translate(0px, 100px);
+    -moz-transform: translate(0px, 100px);
     transform: translate(0px, 100px);
 
     &span {
@@ -126,11 +147,19 @@
     /*-webkit-transform: rotate3d(5, 0, 0, 90deg);
     -ms-transform: rotate3d(5, 0, 0, 90deg);
     transform: rotate3d(5, 0, 0, 90deg);*/
-    opacity: 0.0 !important;
   }
 }
 
 @-webkit-keyframes notransform {
+  100% {
+    transform: none;
+    opacity: 1.0;
+  }
+  0% {
+    opacity: 0.0;
+  }
+}
+@-moz-keyframes notransform {
   100% {
     transform: none;
     opacity: 1.0;
@@ -151,6 +180,18 @@
 }
 
 @-webkit-keyframes notransformHeaderMenu {
+  100% {
+    transform: translateY(-50%);
+    opacity: 1.0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  0% {
+    opacity: 0.0;
+  }
+}
+@-moz-keyframes notransformHeaderMenu {
   100% {
     transform: translateY(-50%);
     opacity: 1.0;
